website-stack/jtmb-dev/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jtmb-dev-service
  namespace: website-stack
spec:
  selector:
    app: jtmb-dev
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
