website-stack/jtmb-dev/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jtmb-dev-ingress
  namespace: website-stack
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: jtmb-dev.rancher-dev.branconet.lan # Replace with your domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jtmb-dev-service
                port:
                  number: 80
